Bug 870282 - Add "Isn't" operator for Searching by "Priority" + test. r=rkent